# Validpack

./: .gitignore  README.md  Validpack.slnx  validpack.json
.github/workflows/: supply-chain-scan.yml  validpack.yml
Validpack/: Program.cs  Validpack.csproj
Validpack.Tests/: ConsoleCollection.cs  Validpack.Tests.csproj
Validpack.Tests/Cli/: CliOptionsTests.cs  ProgramTests.cs
Validpack.Tests/Models/: ConfigurationTests.cs  DependencyTests.cs  ValidationResultTests.cs
Validpack.Tests/Parsers/: CratesParserTests.cs  GradleParserTests.cs  MavenParserTests.cs  NpmParserTests.cs  NuGetParserTests.cs  PyPiParserTests.cs
Validpack.Tests/Services/: ConfigServiceTests.cs  ReportServiceTests.cs  ScannerServiceTests.cs
Validpack.Tests/Validators/: ValidatorIntegrationTests.cs
Validpack/Models/: CliOptions.cs  Configuration.cs  Dependency.cs  DependencyType.cs  ScanResult.cs  ValidationResult.cs  ValidationStatus.cs
Validpack/Parsers/: CratesParser.cs  GradleParser.cs  IProjectParser.cs  MavenParser.cs  NpmParser.cs  NuGetParser.cs  PyPiParser.cs
Validpack/Services/: ConfigService.cs  ReportService.cs  ScannerService.cs
Validpack/Utils/: HttpHelper.cs
Validpack/Validators/: CratesValidator.cs  GradleValidator.cs  IPackageValidator.cs  MavenValidator.cs  NpmValidator.cs  NuGetValidator.cs  PyPiValidator.cs
test-projects/invalid-crates/: Cargo.toml
test-projects/invalid-gradle/: build.gradle
test-projects/invalid-maven/: pom.xml
test-projects/invalid-npm/: package.json
test-projects/invalid-nuget/: InvalidNuGetProject.csproj
(+7 files in other folders)
